KNN simple implementation exercise

--- a/python_course_microsoft/part-01_python_programming_fundalmentals/variables_and_loops.ipynb
+++ b/python_course_microsoft/part-01_python_programming_fundalmentals/variables_and_loops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0f1d7475",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,8 @@
     }
    ],
    "source": [
+    "# MODULE 1 - NOTEBOOK\n",
+    "\n",
     "#Converting Celsius to Fahrenheit; Formula: F = (C * 9/5) + 32\n",
     "\n",
     "# Lists from Step 1 (do not modify)\n",
@@ -32,14 +34,6 @@
     "print(\"Celsius Temperatures:\", celsius_temperatures)\n",
     "print(\"Fahrenheit Temperatures:\", fahrenheit_temperatures)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60dacdaf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
