--- a/python_course_microsoft/part-01_python_programming_fundalmentals/dynamic_list.ipynb
+++ b/python_course_microsoft/part-01_python_programming_fundalmentals/dynamic_list.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "51c7f2bc-a313-4076-8808-01ece7ac1ae8",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
     "import pandas as pd\n",
     "import os \n",
     "\n",
-    "file_name = 'grocery_list.csv'\n",
+    "file_name = 'dynamic_list.csv'\n",
     "\n",
     "if os.path.exists(file_name):\n",
     "    # Load the grocery list from the CSV file\n",
