adding to variable_and_loops exercise ms-py course

--- a/python_course_microsoft/part-01_python_programming_fundalmentals/variables_and_loops.ipynb
+++ b/python_course_microsoft/part-01_python_programming_fundalmentals/variables_and_loops.ipynb
@@ -34,6 +34,52 @@
     "print(\"Celsius Temperatures:\", celsius_temperatures)\n",
     "print(\"Fahrenheit Temperatures:\", fahrenheit_temperatures)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "86041929",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total cost of all items: $10.70\n"
+     ]
+    }
+   ],
+   "source": [
+    "supermarket_items = {\"apples\": 2.5, \"bananas\": 1.2, \"oranges\": 3.0, \"grapes\": 4.0}\n",
+    "total_cost = 0\n",
+    "\n",
+    "for item, price in supermarket_items.items():\n",
+    "    total_cost += price\n",
+    "print(f\"Total cost of all items: ${total_cost:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7d9a20e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique numbers: {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Use a set to find unique numbers in a list\n",
+    "\n",
+    "list_of_numbers = [1, 2, 3, 4, 5, 5, 5, 6, 6, 7, 8, 9, 9, 10]\n",
+    "\n",
+    "unique_numbers = set(list_of_numbers)\n",
+    "print(\"Unique numbers:\", unique_numbers)"
+   ]
   }
  ],
  "metadata": {
