--- a/python_course_microsoft/part-01_python_programming_fundalmentals/variables_and_loops.ipynb
+++ b/python_course_microsoft/part-01_python_programming_fundalmentals/variables_and_loops.ipynb
@@ -80,6 +80,34 @@
     "unique_numbers = set(list_of_numbers)\n",
     "print(\"Unique numbers:\", unique_numbers)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5087427a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intersection: [4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Manual intersection of two lists\n",
+    "\n",
+    "list_a = [1, 2, 3, 4, 5]\n",
+    "list_b = [4, 5, 6, 7, 8]\n",
+    "intersection = []\n",
+    "\n",
+    "for item in list_a:\n",
+    "    if item in list_b:\n",
+    "        intersection.append(item)\n",
+    "\n",
+    "print(\"Intersection:\", intersection)"
+   ]
   }
  ],
  "metadata": {
