data structures exercices

--- a/python_course_microsoft/part-01_python_programming_fundalmentals/variables_and_loops.ipynb
+++ b/python_course_microsoft/part-01_python_programming_fundalmentals/variables_and_loops.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "86041929",
    "metadata": {},
    "outputs": [
@@ -50,6 +50,8 @@
     }
    ],
    "source": [
+    "# Calculate total cost of items in a supermarket\n",
+    "\n",
     "supermarket_items = {\"apples\": 2.5, \"bananas\": 1.2, \"oranges\": 3.0, \"grapes\": 4.0}\n",
     "total_cost = 0\n",
     "\n",
